Fixed all comments